infra/k8s/token-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-service
spec:
  type: NodePort
  selector:
    app: token-service
  ports:
    - name: grpc
      port: 8444
      targetPort: 8444
      nodePort: 30102
